--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "npm": ">=6"
   },
   "scripts": {
-    "test": "test"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -28,6 +28,8 @@
     "@typescript-eslint/parser": "^5.33.1",
     "eslint": "^8.22.0",
     "jest": "^28.1.3",
+    "ts-jest": "^28.0.8",
+    "ts-node": "^10.9.1",
     "typescript": "^4.7.4"
   },
   "dependencies": {
